[tool.poetry]
name = "lirc"
version = "0.0.0"
description = "Interact with the daemon in the Linux Infrared Remote Control package"
authors = ["Eugene Triguba <eugenetriguba@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/eugenetriguba/lirc"
keywords = [
    "LIRC",
    "IR",
    "linux"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.taskipy.tasks]
lint = "poetry run pre-commit run --all"
test = "task test_cov_missing"
test_unit = "poetry run pytest tests/"
test_cov = "task test_unit -- --cov=lirc/"
test_cov_missing = "task test_cov -- -v --cov-report term-missing"
test_ci = "task test_cov -- --cov-report=xml"
test_all = "export LIRC_RUN_LONG_TESTS=true && poetry run task test && unset LIRC_RUN_LONG_TESTS"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pre-commit = { version = "^2.6.0", python = "^3.6.1" }
flake8 = "^3.8.3"
isort = "^5.0.4"
seed-isort-config = { version = "^2.2.0", python = "^3.6.1" }
pytest = "^5.4.3"
pytest-cov = "^2.10.0"
pytest-sugar = "^0.9.4"
bump2version = "^1.0.0"
taskipy = "^1.2.1"
black = "^19.10b0"
sphinx = "^3.1.2"
sphinx_rtd_theme = "^0.5.0"
codecov = "^2.1.7"

[tool.black]
line-length = 88
target_version = ['py38']
include = '\.pyi?$'

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_first_party = ["lirc"]
known_third_party = ["pytest"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
